--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ timezone: America/New_York
 title: Erick Peirson
 description: "Describe"
 
-markdown: redcarpet
+markdown: kramdown
 
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
